chance display hidden korsi

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <button class="player2button">check</button>
     <h2 class="error2"></h2>
     <h1 class="player3">player3</h1>
-    <h2 class="chance"><span></span></h2>
+    <h2 class="chance2"><span></span></h2>
     <input type="password" class="player3input">
     <button class="player3button">start</button>
     <h2 class="error3"></h2>
